--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "express": "^4.10.2",
     "moment": "^2.10.6",
-    "socket.io": "^1.3.7"
+    "play": "^0.5.0",
+    "socket.io": "^1.3.7",
+    "yamljs": "^0.2.4"
   },
   "repository": "https://github.com/SanderVerkuil/gamejam-countdown"
 }
